--- a/web/styles.css
+++ b/web/styles.css
@@ -91,3 +91,21 @@ canvas {
     top: 50%;
     transform: translate(0, -50%);
 }
+
+#inputContainer{
+    position: fixed;
+    right: 500px;
+    top: 50%;
+    transform: translate(0, -50%);
+    text-align: center;
+    margin: 10px;
+}
+
+#controlPanel {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 500px;
+    text-align: center;
+    padding: 10px;
+}
