--- a/web/styles.css
+++ b/web/styles.css
@@ -109,3 +109,9 @@ canvas {
     text-align: center;
     padding: 10px;
 }
+
+#predictedLabelContainer {
+    color: white;
+    font-size: 30px;
+    position: relative;
+}
