update - model evaluation

--- a/web/styles.css
+++ b/web/styles.css
@@ -78,7 +78,7 @@ canvas {
 }
 
 .emphasize{
-    background-color: yellow;
+    background-color: yellow !important;
 }
 
 #container{
@@ -114,4 +114,9 @@ canvas {
     color: white;
     font-size: 30px;
     position: relative;
+}
+
+#statistic {
+    font-size: 20px;
+    padding: 20px;
 }
