--- a/web/styles.css
+++ b/web/styles.css
@@ -130,6 +130,13 @@ input,
     color: black;
 }
 
+#confusionContainer {
+    position: absolute;
+    right: 0px;
+    background-color: white;
+    z-index: 1;
+}
+
 #inputContainer{
     position: fixed;
     right: 500px;
